# SDV4EE-demo

./: .gitmodules  LICENSE  README.md
can-display-drv/: README.md  license_header.txt
can-display-drv/can_display_driver/ssd1305_can_display_driver/: ssd1305_can_display_driver.ino
can-display-drv/can_display_driver/ssd1306_can_display_driver/: ssd1306_can_display_driver.ino
can-gateway/: CMakeLists.txt  HOWTODEBUG.md  Kconfig  README.md  dbc_parser.py  debug.conf  digital.auto.md  init.source  install_zephyr.sh  license_header.txt  prj.conf
can-gateway/boards/: arduino_portenta_h7_m7.overlay  nucleo_h753zi.overlay
can-gateway/src/: debug.h  main.c
can-gateway/src/can/: can.c  can.h
can-gateway/src/udp/: udp.c  udp.h
can-motor-drv/: .clang-format  README.md
can-motor-drv/can_motor_driver/: can_motor_driver.ino
docker_kuksa_databroker_mix_vss-main/: .gitignore  README.md  rundatabrokerEW2025.sh
docker_kuksa_databroker_mix_vss-main/vss/: vss-starterkit.json
docker_kuksa_databroker_mix_vss-main/vss/ew2025demo/: Readme.md  ewoverlay.json  ewoverlay.vspec  vss5.yaml  vssEWCombined.json
mqtt_kuksa_gw-starterkit/: Dockerfile  README.md  mqtt-kuksa-gw.py  requirements.txt
mu-p-controller-app/: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh  license_header.txt  starterkit_config.yaml  toolchain.cmake
mu-p-controller-app/dockerfiles/: Dockerfile.ew
mu-p-controller-app/include/: antiWindUp.hpp  controller.hpp  kuksa_thread.hpp  logging.hpp  motor_control.hpp  motor_state.hpp  multi_control3.hpp  receiver_thread_multi3.hpp  sender_thread_multi3.hpp  serializer.hpp  statistic_thread.hpp  udp_communication.hpp
mu-p-controller-app/include/MixTools/Filter/: biquad.h  digFilter.h
mu-p-controller-app/include/MixTools/RTthreads/: RTmutex.hpp  RTthreads.hpp
mu-p-controller-app/include/config/: com_parameters.hpp  com_parameters_statistic.hpp  control_parameters.hpp
mu-p-controller-app/src/: haptic_force_controller.cpp
mu-p-controller-app/src/config/: com_parameters.cpp  com_parameters_statistic.cpp  motor_control_parameters.cpp
mu-p-controller-app/src/helper/: kuksa_thread.cpp  motor_control.cpp  motor_state.cpp  multi_control3.cpp  serializer.cpp  udp_communication.cpp
starterkit-flow/: README.md  flows.json
zephyr_udp_can_gateway-main/zephyr_udp_can_gateway-main/: .gitignore  LICENSE.md  dbc_parser.py  debug.conf  init.source  install_zephyr.sh  prj.conf
zephyr_udp_can_gateway-main/zephyr_udp_can_gateway-main/boards/: nucleo_h753zi.overlay
zephyr_udp_can_gateway-main/zephyr_udp_can_gateway-main/src/can/: can.c  can.h
zephyr_udp_can_gateway-main/zephyr_udp_can_gateway-main/src/udp/: udp.h
